--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-Please visit my <a href="https://www.linkedin.com/in/lars-zobbe-96a752">LinkIn profile</a>
+Please visit my <a href="https://www.linkedin.com/in/lars-zobbe-96a752">LinkedIn profile</a>
